using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Animationtags
{
    public const string punch1trigger = "punch1";
    public const string punch2trigger = "punch2";
    public const string punch3trigger = "punch3";

    public const string movementbool = "movement";


    public const string kick1trigger = "kick1";
    public const string kick2trigger = "kick2";

    public const string attack1trigger = "attack1";
    public const string attack2trigger = "attack2";
    public const string attack3trigger = "attack3";

    public const string idleanimation = "idle";

    public const string knockdownanimation = "knockdown";
    public const string standupanimation = "standup";
    public const string hittrigger = "hit";
    public const string death = "death";
}

public class Axis
{
    public const string Horizontalaxis = "Horizontal";
    public const string Verticalaxis = "Vertical";
}

public class tags
{
    public const string groundtag = "Ground";
    public const string playertag = "Player";
    public const string enemytag = "Enemy";

    public const string leftarmtag = "LeftArm";
    public const string leftlegtag = "LeftLeg";
    public const string untagged = "Untagged";
    public const string maincamera = "MainCamera";
    public const string healthui = "HealthUI";
}
